# wc-iff-loader

./: .gitignore  .wc_viewer.cpp.swp  CMakeLists.txt  INT1.tga  Makefile  README.md  TDEST.mtl  TDET1.tga  TDET10.tga  TDET11.tga  TDET12.tga  TDET13.tga  TDET14.tga  TDET2.tga  TDET3.tga  TDET4.tga  TDET5.tga  TDET6.tga  TDET7.tga  TDET8.tga  TDET9.tga  TDG1.tga  TDG6.tga  TDHHH.tga  TDLT2.tga  TDLT3.tga  TDLT5.tga  TDTWR1.tga  TDTWR3.tga  TDTWR4.tga  TDX1.tga  TDX2.tga  TDX3.tga  TDX4.tga  TDX5.tga  TDX6.tga  THR1.tga  TXXX.tga  VB1.tga  VB2.tga  (+13 more)
include/wc_iff_loader/: IFFReader.h  WC3Decoder.h
samples/: BEHEMOTH.IFF  BESUP.IFF  BPDEPOT.IFF  BPDEPSUP.IFF  BSTARBSE.IFF  CRUL_GUN.IFF  CRUL_TRT.IFF  CRUS_GUN.IFF  CRUS_TRT.IFF  DRED_TRT.IFF  EXCAL.IFF  HELLCAT.IFF  IMPERA.IFF  INTREPID.IFF  INTSUPX.IFF  KCAR.IFF  KCRUISER.IFF  SML_TGUN.IFF  SML_TURT.IFF  TCRUISER.IFF  TDEST.IFF  VICTEST3.IFF  VICTORY.IFF
src/: IFFReader.cpp  WC3Decoder.cpp
test/: test_wc_iff.cpp
